# cafedelia

./: .clauderules  .gitignore  CLAUDE.md  CLAUDE_CODE_JSONL_ANALYSIS.md  Dockerfile  REACTIVE_UPDATE_FIX.md  README.md  TRANSFORMATION_IMPLEMENTATION.md  claude_sync.py  debug_parsing.py  debug_streaming.py  detailed_debug.py  docker-compose.yml  pyproject.toml  quick_sync_repair.py  run_migrations.py  simple_sync_check.py  simple_sync_test.py  sync_repair.py  test_claude_direct.py  test_log_viewer.py  test_log_viewer_direct.py  test_message_persistence_fix.py  test_pagination.py  test_reactive_updates.py  test_simple_wte.py  test_sync.py  test_sync_parity.py  test_wte_integration.py  trace_issue.py  validate_streaming_fix.py
.opencode/: opencode.db-shm  opencode.db-wal
bridge/: __init__.py  cafed_client.py  session_sync.py
cafed/: demo-database.db  index.ts  jest.config.js  package-lock.json  package.json  tsconfig.json
elia_chat/: __main__.py  app.py  chats_manager.py  config.py  elia.scss  locations.py  models.py
memory-bank/: activeContext.md  elia_database_analysis.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: setup-cafed.sh  start-cafed.sh  test-cafed.sh
sync/: __init__.py  claude_process.py  content_extractor.py  content_truncator.py  database_integrity.py  database_manager.py  database_registrar.py  database_reset.py  deduplication_service.py  display_grouper.py  incremental_sync.py  jsonl_transformer.py  jsonl_watcher.py  message_parser.py  parity_validator.py  persistence_coordinator.py  service.py  (+5 more)
(+76 files in other folders)
